rearranged a few elements inside the scss files, placed the introduction text below the header and fixed a small viewport issue where a lot of whitespace was drawn in between the list and the footer

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -14,12 +14,49 @@ body {
   display: flex;
   -webkit-flex-direction: column;
   flex-direction: column;
-  min-height: 100vh;
   @media screen and (min-width: 21.052631579em) {
     font-size: 1.4em;
   }
   @media screen and (min-width: 29.894736842em) {
     font-size: 1.6em;
+  }
+}
+
+.wrap {
+  width: 100%;
+  max-width: $max-page-width;
+  margin: 0 auto;
+  padding: 0 0.714rem;
+}
+
+.page_header {
+  position: relative;
+  background: linear-gradient(0deg, $contrast-color 2px, $main-color 2px, $main-color 100%);
+  .site-title {
+    display: block;
+    color: $contrast-color;
+    text-decoration: none;
+    text-align: center;
+    overflow: hidden;
+    margin-bottom: -10%;
+  }
+  .title {
+    display: block;
+    margin-top: 5%;
+    font-size: 2.5em;
+    font-weight: 700;
+    @media screen and (min-width: 21.052631579em) {
+      font-size: 2.3em;
+    }
+    @media screen and (min-width: 36.842105263em) {
+      font-size: 2.7em;
+    }
+  }
+  .skyline {
+    display: block;
+    width: 100%;
+    height: 100%;
+    fill: $contrast-color;
   }
 }
 
@@ -31,17 +68,14 @@ body {
   }
 }
 
-.wrap {
-  width: 100%;
-  max-width: $max-page-width;
-  margin: 0 auto;
-  padding: 0 0.714rem;
-}
-
 .page_content{
   -webkit-flex: 1;
   flex: 1;
-  padding: 3rem 0;
+  padding: 2rem 0;
+  overflow: hidden;
+  @media screen and (min-width: 43.75em) {
+    padding: 3rem 0;
+  }
   a {
     color: $main-color;
     border-bottom: 1px dashed currentColor;
