--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,45 +12,7 @@ html {
   box-sizing: inherit;
 }
 
-.page_header {
-  position: relative;
-  background: linear-gradient(0deg, $contrast-color 2px, $main-color 2px, $main-color 100%);
-  //@media screen and (min-width: $max-page-width){
-  //  background: linear-gradient(0deg, $contrast-color 11px, $main-color 11px, $main-color 100%);
-  //}
-  .site-title {
-    display: block;
-    margin: 0 0 -15%;
-    color: $contrast-color;
-    text-decoration: none;
-    text-align: center;
-    overflow: hidden;
-    @media screen and (min-width: 29.894736842em) {
-      margin: 0 0 -11%;
-    }
-    @media screen and (min-width: 36.842105263em) {
-      margin: 0 0 1em;
-    }
-  }
-  .title {
-    display: block;
-    margin-top: 5%;
-    font-size: 2.5em;
-    font-weight: 700;
-    @media screen and (min-width: 21.052631579em) {
-      font-size: 2.3em;
-    }
-    @media screen and (min-width: 36.842105263em) {
-      font-size: 2.7em;
-    }
-  }
-  .skyline {
-    display: block;
-    width: 100%;
-    height: 100%;
-    fill: $contrast-color;
-  }
-}
+
 
 .page_footer {
   background-color: $main-color;
@@ -67,16 +29,19 @@ html {
 }
 
 .intro {
-  color: #FFF;
   text-align: center;
-  margin: 0 auto -12%;
-  max-width: 360px;
-}
-
-.intro a {
-  color: inherit;
-}
-
-.intro a:hover {
-  opacity: .75;
+  margin: 0 auto 2rem;
+  max-width: 12.2em;
+  color: hsl(60, 1%, 44%);
+  @media screen and (min-width: 25em) {
+    font-size: 1.4em;
+    line-height: 1.2;
+  }
+  @media screen and (min-width: 30em) {
+    max-width: 15em;
+  }
+  @media screen and (min-width: 43.75em) {
+    margin: 0 auto 3rem;
+    max-width: 17.777777778em;
+  }
 }
